--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 nvdcpematch-1.0.json
-nvdcve-1.1-2020.json
+**/data/**
 official-cpe-dictionary_v2.3.xml
 __pycache__/
 .~lock.*
@@ -14,5 +14,4 @@ vsd.json
 vtd.json
 ev.json
 **/myVenv/**
-
 *.csv
